[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/progress_bar.png" type="Texture" id=1]
[ext_resource path="res://UI/progress_bar_center.png" type="Texture" id=2]
[ext_resource path="res://UI/ProgressUI.gd" type="Script" id=3]

[node name="ProgressUI" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="NinePatchRect" parent="."]
margin_right = 256.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
texture = ExtResource( 1 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="TextureProgress" parent="."]
margin_right = 256.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
value = 75.0
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
stretch_margin_left = 16
stretch_margin_top = 16
stretch_margin_right = 16
stretch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressTimer" type="Timer" parent="."]
[connection signal="timeout" from="ProgressTimer" to="." method="_on_ProgressTimer_timeout"]
